--- a/index.html
+++ b/index.html
@@ -4,12 +4,8 @@ search_exclude: true
 image: images/logo.png
 ---
 
-This site is built with [fastpages](https://github.com/fastai/fastpages), An easy to use blogging platform with extra features for Jupyter Notebooks.
+This is my blog where I try to explain machine learning concepts with the help of intuitions and maths. This also helps me learn new concepts as well as validate my understanding. You can now more about me [here](https://jaygala24.github.io/blog/about/).
 
-![]({{site.baseurl}}/images/diagram.png "https://github.com/fastai/fastpages")
-
-[fastpages](https://github.com/fastai/fastpages) automates the process of creating blog posts via GitHub Actions, so you don't have to fuss with conversion scripts.  A full list of features can be found on [GitHub](https://github.com/fastai/fastpages).  
-
-You can edit the `index.html` file to change this content.
+This site is built with [fastpages](https://github.com/fastai/fastpages), An easy to use blogging platform with extra features for Jupyter Notebooks. Thanks to the folks at fast.ai for making this accessible to everyone.
 
 # Posts
