--- a/about/index.html
+++ b/about/index.html
@@ -108,7 +108,7 @@ window.onload = wrap_img;
 
 <p>You can find more about the publications on <a href="https://scholar.google.com/citations?user=lNn2qGoAAAAJ&amp;hl=en">Scholar</a>.</p>
 
-<p>I have previously worked as a ML project intern at Tata Consultancy Services where I got the opportunity to work on understanding customer behavior using NLP. I have also collaborated with Prof. Pratik Kanani on a industry project focusing on anamoly detection in heart rate (pulse) using IoT and ML. I also led a team that developed a platform for conducting C programming examination in the college for over 500 students.</p>
+<p>I have previously worked as a ML project intern at Tata Consultancy Services where I got the opportunity to work on understanding customer behavior using NLP. I have also collaborated with Prof. Pratik Kanani on a industry project focusing on anamoly detection in heart rate (pulse) using IoT and ML. I also led a team that developed a platform for conducting C programming examination in the college for over 500 students <a href="https://www.youtube.com/watch?v=kn7lwJoYfuU">demo</a>.</p>
 
 <p>I’m also working as a mentor at <a href="https://github.com/djunicode">DJ Unicode</a> an open source organization by our college department where I help juniors on software development projects and as well as learn new stuffs too 😀.</p>
 
