--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: home
 search_exclude: true
 ---
 
-This is my blog where I try to explain machine learning concepts with the help of intuitions and maths. This also helps me learn new concepts as well as validate my understanding. You can now more about me [here](https://jaygala24.github.io/blog/about/).
+This is my blog where I try to explain machine learning concepts with the help of intuitions and maths. This also helps me learn new concepts as well as validate my understanding. You can now find more about me [here](https://jaygala24.github.io/blog/about/).
 
 This site is built with [fastpages](https://github.com/fastai/fastpages), An easy to use blogging platform with extra features for Jupyter Notebooks. Thanks to the folks at fast.ai for making this accessible to everyone.
 
