--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><p>This is my blog where I try to explain machine learning concepts with the help of intuitions and maths. This also helps me learn new concepts as well as validate my understanding. You can now more about me <a href="https://jaygala24.github.io/blog/about/">here</a>.</p>
+        <div class="home"><p>This is my blog where I try to explain machine learning concepts with the help of intuitions and maths. This also helps me learn new concepts as well as validate my understanding. You can now find more about me <a href="https://jaygala24.github.io/blog/about/">here</a>.</p>
 
 <p>This site is built with <a href="https://github.com/fastai/fastpages">fastpages</a>, An easy to use blogging platform with extra features for Jupyter Notebooks. Thanks to the folks at fast.ai for making this accessible to everyone.</p>
 
