deploy: ef32daf8260b81171899fabb44e7f59dd5078cf9

--- a/about/index.html
+++ b/about/index.html
@@ -93,29 +93,32 @@ window.onload = wrap_img;
     <figure>
         <img src="/blog/images/profile.png" class="profile-img" />
     </figure>
-<center>
+</center>
 
-Hi! I'm Jay 👋, a CS undergrad from Mumbai University. I started my programming career with C language in 2017. I have fluency in programming languages like C, Python and JavaScript. I have been working on solving problems using ML for over a year now.
+<p>Hi! I’m Jay 👋, a CS undergrad from Mumbai University. I started my programming career with C language in 2017. I have fluency in programming languages like C, Python and JavaScript. I have been working on solving problems using ML for over a year now.</p>
 
-Current areas of interests:
-- Multimodal machine learning (Language and Vision Intersection)
-- Fairness and bias in language models
-- Interpretability
+<p>Current areas of interests:</p>
+<ul>
+  <li>Multimodal machine learning (Language and Vision Intersection)</li>
+  <li>Fairness and bias in language models</li>
+  <li>Interpretability</li>
+</ul>
 
-Independent research projects:
-- Worked on the task of visual dialog with the aim of reducing the bias towards dialog history using mixed attention mechanisms as a part of final year project (Accepted at [ICACDS 2021](https://icacds.com/)).
-- Co-authored a paper on using object detection and image processing techniques to estimate the dimension of potholes (Published at [IVCNZ 2020](https://ecs.wgtn.ac.nz/Events/IVCNZ2020/)).
-- Co-authored a chapter titled "Combatting COVID-19 using Object Detection Techniques" for Elsevier's CPS-AI &amp; COVID-19 book (Accepted).
-- Co-authored papers on using IoT and ML effectively to automate tasks in agriculture and waste management sectors.
+<p>Independent research projects:</p>
+<ul>
+  <li>Worked on the task of visual dialog with the aim of reducing the bias towards dialog history using mixed attention mechanisms as a part of final year project (Accepted at <a href="https://icacds.com/">ICACDS 2021</a>).</li>
+  <li>Co-authored a paper on using object detection and image processing techniques to estimate the dimension of potholes (Published at <a href="https://ecs.wgtn.ac.nz/Events/IVCNZ2020/">IVCNZ 2020</a>).</li>
+  <li>Co-authored a chapter titled “Combatting COVID-19 using Object Detection Techniques” for Elsevier’s CPS-AI &amp; COVID-19 book (Accepted).</li>
+  <li>Co-authored papers on using IoT and ML effectively to automate tasks in agriculture and waste management sectors.</li>
+</ul>
 
-You can find more about the publications on [Scholar](https://scholar.google.com/citations?user=lNn2qGoAAAAJ&amp;hl=en).
+<p>You can find more about the publications on <a href="https://scholar.google.com/citations?user=lNn2qGoAAAAJ&amp;hl=en">Scholar</a>.</p>
 
-I have previously worked as a ML project intern at Tata Consultancy Services where I got the opportunity to work on understanding customer behavior using NLP. I have also collaborated with Prof. Pratik Kanani on a industry project focusing on anamoly detection in heart rate (pulse) using IoT and ML. I also led a team that developed a platform for conducting C programming examination in the college for over 500 students ([demo](https://www.youtube.com/watch?v=kn7lwJoYfuU)).
+<p>I have previously worked as a ML project intern at Tata Consultancy Services where I got the opportunity to work on understanding customer behavior using NLP. I have also collaborated with Prof. Pratik Kanani on a industry project focusing on anamoly detection in heart rate (pulse) using IoT and ML. I also led a team that developed a platform for conducting C programming examination in the college for over 500 students (<a href="https://www.youtube.com/watch?v=kn7lwJoYfuU">demo</a>).</p>
 
-I'm also working as a mentor at [DJ Unicode](https://github.com/djunicode) an open source organization by our college department where I help juniors on software development projects and as well as learn new stuffs too 😀.
+<p>I’m also working as a mentor at <a href="https://github.com/djunicode">DJ Unicode</a> an open source organization by our college department where I help juniors on software development projects and as well as learn new stuffs too 😀.</p>
 
-You can reach out to me using [Twitter](https://twitter.com/jaygala24/) or [Linkedin](https://www.linkedin.com/in/jaygala24).
-</center></center>
+<p>You can reach out to me using <a href="https://twitter.com/jaygala24/">Twitter</a> or <a href="https://www.linkedin.com/in/jaygala24">Linkedin</a>.</p>
 
   </div>
 
