deploy: 8542028b57a14ba600068c0781c8190dae2b7a93

--- a/about/index.html
+++ b/about/index.html
@@ -95,7 +95,7 @@ window.onload = wrap_img;
     </figure>
 </center>
 
-<p>Hi! I’m Jay 👋, a CS undergrad from Mumbai University. I started my programming career with C language in 2017. I have fluency in programming languages like C, Python and JavaScript. I have been working on solving problems using ML for over a year now.</p>
+<p>Hi! I’m Jay 👋, a CS undergrad from Mumbai University. I started my programming career with C language in 2017. I have fluency in programming languages like C, Python and JavaScript. I have been working on solving problems using ML for over a year now. I’m currently working as a research intern at University of California San Diego under Dr. Pengtao Xie on applying humans’ learning skills for Neural Architecture Search.</p>
 
 <p>Current areas of interests:</p>
 <ul>
@@ -114,7 +114,7 @@ window.onload = wrap_img;
 
 <p>You can find more about the publications on <a href="https://scholar.google.com/citations?user=lNn2qGoAAAAJ&amp;hl=en">Scholar</a>.</p>
 
-<p>I have previously worked as a ML project intern at Tata Consultancy Services where I got the opportunity to work on understanding customer behavior using NLP. I have also collaborated with Prof. Pratik Kanani on a industry project focusing on anamoly detection in heart rate (pulse) using IoT and ML. I also led a team that developed a platform for conducting C programming examination in the college for over 500 students (<a href="https://www.youtube.com/watch?v=kn7lwJoYfuU">demo</a>).</p>
+<p>I have previously worked as a ML project intern at Tata Consultancy Services where I got the opportunity to work on understanding customer behavior using NLP. I have also collaborated with Dr. Pratik Kanani on a industry project focusing on anamoly detection in heart rate (pulse) using IoT and ML. I also led a team that developed a platform for conducting C programming examination in the college for over 500 students (<a href="https://www.youtube.com/watch?v=kn7lwJoYfuU">demo</a>).</p>
 
 <p>I’m also working as a mentor at <a href="https://github.com/djunicode">DJ Unicode</a> an open source organization by our college department where I help juniors on software development projects and as well as learn new stuffs too 😀.</p>
 
