--- a/about/index.html
+++ b/about/index.html
@@ -95,28 +95,31 @@ window.onload = wrap_img;
     </figure>
 </center>
 
-<p>Hi! I’m Jay 👋, a CS undergrad from Mumbai University. I started my programming career with C language in 2017. I have fluency in programming languages like C, Python and JavaScript. I have been working on solving problems using ML for over a year now. I’m currently working as a research intern at University of California San Diego under Dr. Pengtao Xie on applying humans’ learning skills for Neural Architecture Search.</p>
+<p>Hi! I’m Jay 👋, a CS undergrad from Mumbai University. I started my programming career with C language in 2017. I have fluency in programming languages like C, Python, and JavaScript. I have been working on solving problems using ML for over a year now.</p>
 
-<p>Current areas of interests:</p>
+<p>I’m currently working as a research intern at the <a href="https://ucsd.edu/">University of California San Diego</a> under <a href="https://sites.google.com/site/pengtaoxie2008">Dr. Pengtao Xie</a> on applying humans’ learning skills for Neural Architecture Search. I’m also a Teaching Assistant at the <a href="https://djunicode.github.io/umlsc-2021/">Unicode Machine Learning Summer Course 2021</a>.</p>
+
+<p>Current areas of interest:</p>
 <ul>
   <li>Multimodal machine learning (Language and Vision Intersection)</li>
+  <li>Commonsense Reasoning</li>
   <li>Fairness and bias in language models</li>
   <li>Interpretability</li>
 </ul>
 
 <p>Independent research projects:</p>
 <ul>
-  <li>Worked on the task of visual dialog with the aim of reducing the bias towards dialog history using mixed attention mechanisms as a part of final year project (Accepted at <a href="https://icacds.com/">ICACDS 2021</a>).</li>
+  <li>Worked on the task of visual dialog to reduce the bias towards dialog history using mixed attention mechanisms as a part of final year project (Accepted at <a href="https://icacds.com/">ICACDS 2021</a>).</li>
   <li>Co-authored a paper on using object detection and image processing techniques to estimate the dimension of potholes (Published at <a href="https://ecs.wgtn.ac.nz/Events/IVCNZ2020/">IVCNZ 2020</a>).</li>
   <li>Co-authored a chapter titled “Combatting COVID-19 using Object Detection Techniques” for Elsevier’s CPS-AI &amp; COVID-19 book (Accepted).</li>
-  <li>Co-authored papers on using IoT and ML effectively to automate tasks in agriculture and waste management sectors.</li>
+  <li>Co-authored papers on using IoT and ML effectively to automate tasks in the agriculture and waste management sectors.</li>
 </ul>
 
 <p>You can find more about the publications on <a href="https://scholar.google.com/citations?user=lNn2qGoAAAAJ&amp;hl=en">Scholar</a>.</p>
 
-<p>I have previously worked as a ML project intern at Tata Consultancy Services where I got the opportunity to work on understanding customer behavior using NLP. I have also collaborated with Dr. Pratik Kanani on a industry project focusing on anamoly detection in heart rate (pulse) using IoT and ML. I also led a team that developed a platform for conducting C programming examination in the college for over 500 students (<a href="https://www.youtube.com/watch?v=kn7lwJoYfuU">demo</a>).</p>
+<p>I have previously worked as an ML project intern at Tata Consultancy Services, where I got the opportunity to work on understanding customer behavior using NLP. I have also collaborated with Dr. Pratik Kanani on an industry project focusing on anomaly detection in heart rate (pulse) using IoT and ML. I also led a team that developed a platform for conducting C programming examination in the college for over 500 students (<a href="https://www.youtube.com/watch?v=kn7lwJoYfuU">demo</a>).</p>
 
-<p>I’m also working as a mentor at <a href="https://github.com/djunicode">DJ Unicode</a> an open source organization by our college department where I help juniors on software development projects and as well as learn new stuffs too 😀.</p>
+<p>I was a mentor at <a href="https://github.com/djunicode">DJ Unicode</a>, an open-source organization by our college department, where I help juniors on software development projects as well as learn new stuff too 😀.</p>
 
 <p>You can reach out to me using <a href="https://twitter.com/jaygala24/">Twitter</a> or <a href="https://www.linkedin.com/in/jaygala24">Linkedin</a>.</p>
 
