--- a/about/index.html
+++ b/about/index.html
@@ -97,7 +97,7 @@ window.onload = wrap_img;
 
 <p>Hi! I’m Jay 👋, a CS undergrad from Mumbai University. I started my programming career with C language in 2017. I have fluency in programming languages like C, Python, and JavaScript. I have been working on solving problems using ML for over a year now.</p>
 
-<p>I’m currently working as a research intern at the <a href="https://ucsd.edu/">University of California San Diego</a> under <a href="https://sites.google.com/site/pengtaoxie2008">Dr. Pengtao Xie</a> on applying humans’ learning skills for Neural Architecture Search. I’m also a Teaching Assistant at the <a href="https://djunicode.github.io/umlsc-2021/">Unicode Machine Learning Summer Course 2021</a>.</p>
+<p>I’m currently working as a research intern at the <a href="https://ucsd.edu/">University of California San Diego</a> under <a href="https://sites.google.com/site/pengtaoxie2008">Dr. Pengtao Xie</a> on applying humans’ learning skills for Neural Architecture Search. I’m also a Teaching Assistant at the <a href="https://djunicode.github.io/umlsc-2021/">Unicode Machine Learning Summer Course 2021</a> supported by Google AI Research India.</p>
 
 <p>Current areas of interest:</p>
 <ul>
@@ -120,6 +120,36 @@ window.onload = wrap_img;
 <p>I have previously worked as an ML project intern at Tata Consultancy Services, where I got the opportunity to work on understanding customer behavior using NLP. I have also collaborated with Dr. Pratik Kanani on an industry project focusing on anomaly detection in heart rate (pulse) using IoT and ML. I also led a team that developed a platform for conducting C programming examination in the college for over 500 students (<a href="https://www.youtube.com/watch?v=kn7lwJoYfuU">demo</a>).</p>
 
 <p>I was a mentor at <a href="https://github.com/djunicode">DJ Unicode</a>, an open-source organization by our college department, where I help juniors on software development projects as well as learn new stuff too 😀.</p>
+
+<p>I have also presented paper reviews as a part of Unicode Research Group on the topics of Variational Inference and Probabilistic Programming (<em>Initially, I have made some mistakes as well as learned from my peers through discussions during these paper presentations</em>).</p>
+<ul>
+  <li>
+    <table>
+      <tbody>
+        <tr>
+          <td>Auto-encoding Variational Bayes (<a href="https://docs.google.com/presentation/d/1l8Q9y9KOKjvu2jbKkaA2KOHMFGILWoN2pP5yTihwq18/edit?usp=sharing">Slides</a></td>
+          <td><a href="https://www.youtube.com/watch?v=bSQ129B_2jM&amp;list=PLob0yCmJjJ3U6vUrmExdTpMoRh43c1nXK&amp;index=6">Video</a></td>
+          <td><a href="https://arxiv.org/pdf/1312.6114.pdf">Paper</a>)</td>
+        </tr>
+      </tbody>
+    </table>
+  </li>
+  <li>
+    <table>
+      <tbody>
+        <tr>
+          <td>Deep Probabilistic Programming (<a href="https://docs.google.com/presentation/d/1aswNGbhqRQaH0K7Cd5Cd-41nS36O1XLOlC-qIJElff8/edit?usp=sharing">Slides</a></td>
+          <td><a href="https://www.youtube.com/watch?v=nT8ISRrUixQ&amp;list=PLob0yCmJjJ3U6vUrmExdTpMoRh43c1nXK&amp;index=7">Video</a></td>
+          <td><a href="https://arxiv.org/pdf/1701.03757.pdf">Paper</a>)</td>
+        </tr>
+      </tbody>
+    </table>
+  </li>
+</ul>
+
+<blockquote>
+  <p>Note: <em>This is just an overview of some of the projects I’ve worked. Please check my <a href="https://github.com/jaygala24">GitHub profile</a> and <a href="https://jaygala24.github.io/blog/cv/">CV</a> for more details.</em></p>
+</blockquote>
 
 <p>You can reach out to me using <a href="https://twitter.com/jaygala24/">Twitter</a> or <a href="https://www.linkedin.com/in/jaygala24">Linkedin</a>.</p>
 
