--- a/about/index.html
+++ b/about/index.html
@@ -123,28 +123,8 @@ window.onload = wrap_img;
 
 <p>I have also presented paper reviews as a part of Unicode Research Group on the topics of Variational Inference and Probabilistic Programming (<em>Initially, I have made some mistakes as well as learned from my peers through discussions during these paper presentations</em>).</p>
 <ul>
-  <li>
-    <table>
-      <tbody>
-        <tr>
-          <td>Auto-encoding Variational Bayes (<a href="https://docs.google.com/presentation/d/1l8Q9y9KOKjvu2jbKkaA2KOHMFGILWoN2pP5yTihwq18/edit?usp=sharing">Slides</a></td>
-          <td><a href="https://www.youtube.com/watch?v=bSQ129B_2jM&amp;list=PLob0yCmJjJ3U6vUrmExdTpMoRh43c1nXK&amp;index=6">Video</a></td>
-          <td><a href="https://arxiv.org/pdf/1312.6114.pdf">Paper</a>)</td>
-        </tr>
-      </tbody>
-    </table>
-  </li>
-  <li>
-    <table>
-      <tbody>
-        <tr>
-          <td>Deep Probabilistic Programming (<a href="https://docs.google.com/presentation/d/1aswNGbhqRQaH0K7Cd5Cd-41nS36O1XLOlC-qIJElff8/edit?usp=sharing">Slides</a></td>
-          <td><a href="https://www.youtube.com/watch?v=nT8ISRrUixQ&amp;list=PLob0yCmJjJ3U6vUrmExdTpMoRh43c1nXK&amp;index=7">Video</a></td>
-          <td><a href="https://arxiv.org/pdf/1701.03757.pdf">Paper</a>)</td>
-        </tr>
-      </tbody>
-    </table>
-  </li>
+  <li>Auto-encoding Variational Bayes (<a href="https://docs.google.com/presentation/d/1l8Q9y9KOKjvu2jbKkaA2KOHMFGILWoN2pP5yTihwq18/edit?usp=sharing">Slides</a>, <a href="https://www.youtube.com/watch?v=bSQ129B_2jM&amp;list=PLob0yCmJjJ3U6vUrmExdTpMoRh43c1nXK&amp;index=6">Video</a>, <a href="https://arxiv.org/pdf/1312.6114.pdf">Paper</a>)</li>
+  <li>Deep Probabilistic Programming (<a href="https://docs.google.com/presentation/d/1aswNGbhqRQaH0K7Cd5Cd-41nS36O1XLOlC-qIJElff8/edit?usp=sharing">Slides</a>, <a href="https://www.youtube.com/watch?v=nT8ISRrUixQ&amp;list=PLob0yCmJjJ3U6vUrmExdTpMoRh43c1nXK&amp;index=7">Video</a>, <a href="https://arxiv.org/pdf/1701.03757.pdf">Paper</a>)</li>
 </ul>
 
 <blockquote>
