--- a/about/index.html
+++ b/about/index.html
@@ -128,7 +128,7 @@ window.onload = wrap_img;
 </ul>
 
 <blockquote>
-  <p>Note: <em>This is just an overview of some of the projects I’ve worked. Please check my <a href="https://github.com/jaygala24">GitHub profile</a> and <a href="https://jaygala24.github.io/blog/cv/">CV</a> for more details.</em></p>
+  <p><em>Note: This is just an overview of some of the projects I’ve worked. Please check my <a href="https://github.com/jaygala24">GitHub profile</a> and <a href="https://jaygala24.github.io/blog/cv/">CV</a> for more details.</em></p>
 </blockquote>
 
 <p>You can reach out to me using <a href="https://twitter.com/jaygala24/">Twitter</a> or <a href="https://www.linkedin.com/in/jaygala24">Linkedin</a>.</p>
