deploy: 9a0f56e5601f8865e53d54fb8cbbce2a760b0d03

--- a/about/index.html
+++ b/about/index.html
@@ -131,7 +131,7 @@ window.onload = wrap_img;
   <p><em>Note: This is just an overview of some of the projects I’ve worked. Please check my <a href="https://github.com/jaygala24">GitHub profile</a> and <a href="https://jaygala24.github.io/blog/cv/">CV</a> for more details.</em></p>
 </blockquote>
 
-<p>You can reach out to me using <a href="https://twitter.com/jaygala24/">Twitter</a> or <a href="https://www.linkedin.com/in/jaygala24">Linkedin</a>.</p>
+<p>You can reach out to me using <a href="mailto:jaygala24@gmail.com">Email</a>, <a href="https://twitter.com/jaygala24/">Twitter</a> or <a href="https://www.linkedin.com/in/jaygala24">Linkedin</a>.</p>
 
   </div>
 
