deploy: eed42e183f949beab5d6c354f54d51e75b13f118

--- a/about/index.html
+++ b/about/index.html
@@ -121,7 +121,7 @@ window.onload = wrap_img;
 
 <p>I was a mentor at <a href="https://github.com/djunicode">DJ Unicode</a>, an open-source organization by our college department, where I help juniors on software development projects as well as learn new stuff too 😀.</p>
 
-<p>I have also presented paper reviews as a part of Unicode Research Group on the topics of Variational Inference and Probabilistic Programming (<em>Initially, I have made some mistakes as well as learned from my peers through discussions during these paper presentations</em>).</p>
+<p>I have also presented paper reviews as a part of Unicode Research Group on the topics of Variational Inference and Probabilistic Programming (<em>I have made some mistakes during initial presentations but learnt a lot from my peers through discussions</em>).</p>
 <ul>
   <li>Auto-encoding Variational Bayes (<a href="https://docs.google.com/presentation/d/1l8Q9y9KOKjvu2jbKkaA2KOHMFGILWoN2pP5yTihwq18/edit?usp=sharing">Slides</a>, <a href="https://www.youtube.com/watch?v=bSQ129B_2jM&amp;list=PLob0yCmJjJ3U6vUrmExdTpMoRh43c1nXK&amp;index=6">Video</a>, <a href="https://arxiv.org/pdf/1312.6114.pdf">Paper</a>)</li>
   <li>Deep Probabilistic Programming (<a href="https://docs.google.com/presentation/d/1aswNGbhqRQaH0K7Cd5Cd-41nS36O1XLOlC-qIJElff8/edit?usp=sharing">Slides</a>, <a href="https://www.youtube.com/watch?v=nT8ISRrUixQ&amp;list=PLob0yCmJjJ3U6vUrmExdTpMoRh43c1nXK&amp;index=7">Video</a>, <a href="https://arxiv.org/pdf/1701.03757.pdf">Paper</a>)</li>
