--- a/about/index.html
+++ b/about/index.html
@@ -95,7 +95,7 @@ window.onload = wrap_img;
     </figure>
 </center>
 
-<p>Hi! I’m Jay 👋, a CS undergrad from Mumbai University. I started my programming career with C language in 2017. I have fluency in programming languages like C, Python, and JavaScript. I have been working on solving problems using ML for over a year now.</p>
+<p>Hi! I’m Jay 👋, a CS undergrad from Mumbai University who recently graduated in May 2021. I started my programming career with C language in 2017. I have fluency in programming languages like C, Python, and JavaScript. I have been working on solving problems using ML for over a year now.</p>
 
 <p>I’m currently working as a research intern at the <a href="https://ucsd.edu/">University of California San Diego</a> under <a href="https://sites.google.com/site/pengtaoxie2008">Dr. Pengtao Xie</a> on applying humans’ learning skills for Neural Architecture Search. I’m also a Teaching Assistant at the <a href="https://djunicode.github.io/umlsc-2021/">Unicode Machine Learning Summer Course 2021</a> supported by Google AI Research India.</p>
 
