--- a/about/index.html
+++ b/about/index.html
@@ -77,7 +77,7 @@ window.onload = wrap_img;
           </span>
         </label>
 
-        <div class="trigger"><a class="page-link" href="/blog/about/">About Me</a><a class="page-link" href="/blog/cv/">CV</a><a class="page-link" href="/blog/search/">Search</a><a class="page-link" href="/blog/categories/">Categories</a></div>
+        <div class="trigger"><a class="page-link" href="/blog/about/">About Me</a><a class="page-link" href="/blog/cv/">CV</a><a class="page-link" href="/blog/publications/">Google Scholar</a><a class="page-link" href="/blog/search/">Search</a><a class="page-link" href="/blog/categories/">Categories</a></div>
       </nav></div>
 </header>
 <main class="page-content" aria-label="Content">
@@ -97,7 +97,7 @@ window.onload = wrap_img;
 
 <p>Hi! I’m Jay 👋, a CS undergrad from Mumbai University who recently graduated in May 2021. I started my programming career with C language in 2017. I have fluency in programming languages like C, Python, and JavaScript. I have been working on solving problems using ML for over a year now.</p>
 
-<p>I’m currently working as a research intern at the <a href="https://ucsd.edu/">University of California San Diego</a> under <a href="https://sites.google.com/site/pengtaoxie2008">Dr. Pengtao Xie</a> on applying humans’ learning skills for Neural Architecture Search. I’m also a Teaching Assistant at the <a href="https://djunicode.github.io/umlsc-2021/">Unicode Machine Learning Summer Course 2021</a> supported by Google AI Research India.</p>
+<p>I’m currently working as a research intern at the <a href="https://ucsd.edu/">University of California San Diego</a> under <a href="https://sites.google.com/site/pengtaoxie2008">Dr. Pengtao Xie</a> on applying humans’ learning skills for Neural Architecture Search, specifically learning from mistakes. I was also a Teaching Assistant for the <a href="https://djunicode.github.io/umlsc-2021/">Unicode Machine Learning Summer Course 2021</a> supported by Google AI Research India. I’m also collaborating with <a href="https://scholar.google.com/citations?hl=en&amp;user=3M3WdvkAAAAJ&amp;view_op=list_works&amp;sortby=pubdate">Zeerak Waseem</a> on Hate Speech Detection using Federated Learning.</p>
 
 <p>Current areas of interest:</p>
 <ul>
@@ -121,15 +121,17 @@ window.onload = wrap_img;
 
 <p>I was a mentor at <a href="https://github.com/djunicode">DJ Unicode</a>, an open-source organization by our college department, where I help juniors on software development projects as well as learn new stuff too 😀.</p>
 
-<p>I have also presented paper reviews as a part of Unicode Research Group on the topics of Variational Inference and Probabilistic Programming (<em>I have made some mistakes during initial presentations but learnt a lot from my peers through discussions</em>).</p>
+<p>I have also presented paper reviews as a part of Unicode Research Group on the topics of Variational Inference and Probabilistic Programming (<em>I have made some mistakes during initial presentations but have constantly tried to improve and learn through discussions with peers</em>).</p>
 <ul>
   <li>Auto-encoding Variational Bayes (<a href="https://docs.google.com/presentation/d/1l8Q9y9KOKjvu2jbKkaA2KOHMFGILWoN2pP5yTihwq18/edit?usp=sharing">Slides</a>, <a href="https://www.youtube.com/watch?v=bSQ129B_2jM&amp;list=PLob0yCmJjJ3U6vUrmExdTpMoRh43c1nXK&amp;index=6">Video</a>, <a href="https://arxiv.org/pdf/1312.6114.pdf">Paper</a>)</li>
   <li>Deep Probabilistic Programming (<a href="https://docs.google.com/presentation/d/1aswNGbhqRQaH0K7Cd5Cd-41nS36O1XLOlC-qIJElff8/edit?usp=sharing">Slides</a>, <a href="https://www.youtube.com/watch?v=nT8ISRrUixQ&amp;list=PLob0yCmJjJ3U6vUrmExdTpMoRh43c1nXK&amp;index=7">Video</a>, <a href="https://arxiv.org/pdf/1701.03757.pdf">Paper</a>)</li>
 </ul>
 
-<blockquote>
-  <p><em>Note: This is just an overview of some of the projects I’ve worked. Please check my <a href="https://github.com/jaygala24">GitHub profile</a> and <a href="https://jaygala24.github.io/blog/cv/">CV</a> for more details.</em></p>
-</blockquote>
+<p style="background: #dbedff; padding: 16px !important; border-radius: 8px; border-color: rgba(4,66,137,0.2); color: #24292e;">
+    <em>
+        Note: This is just an overview of some of the projects I’ve worked. Please check my <a href="https://github.com/jaygala24">GitHub profile</a> and <a href="https://jaygala24.github.io/blog/cv/">CV</a> for more details.
+    </em>
+</p>
 
 <p>You can reach out to me using <a href="mailto:jaygala24@gmail.com">Email</a>, <a href="https://twitter.com/jaygala24/">Twitter</a> or <a href="https://www.linkedin.com/in/jaygala24">Linkedin</a>.</p>
 
