deploy: 64d4dc933d2dc4c58d1e870fd7e9e2fb48db0385

--- a/about/index.html
+++ b/about/index.html
@@ -99,7 +99,7 @@ window.onload = wrap_img;
 
 <p>I’m currently working as a research intern at the <a href="https://ucsd.edu/">University of California San Diego</a> under <a href="https://sites.google.com/site/pengtaoxie2008">Dr. Pengtao Xie</a> on applying humans’ learning skills for Neural Architecture Search, specifically learning from mistakes. I’m also collaborating with <a href="https://scholar.google.com/citations?hl=en&amp;user=3M3WdvkAAAAJ&amp;view_op=list_works&amp;sortby=pubdate">Zeerak Waseem</a> on Hate Speech Detection using Federated Learning.</p>
 
-<p>I was a Teaching Assistant for the <a href="https://djunicode.github.io/umlsc-2021/">Unicode Machine Learning Summer Course 2021</a> supported by Google AI Research India. I also conducted a Research Seminar as a part of the Unicode Research Group with the other TAs. <a href="https://drive.google.com/file/d/1BNai1MVN7mx0wuAFgYVKfh48YF-D3PDS/view">Slides</a> and <a href="https://drive.google.com/file/d/1DEDxLmlsJvCtRh5upyT7fvFI4XQA2fi3/view">recording</a> for the above seminar are available publicly.</p>
+<p>I was a Teaching Assistant for the <a href="https://djunicode.github.io/umlsc-2021/">Unicode Machine Learning Summer Course 2021</a> supported by Google AI Research India. I also conducted a Research Seminar as a part of the Unicode Research Group with the other TAs. <a href="https://drive.google.com/file/d/1BNai1MVN7mx0wuAFgYVKfh48YF-D3PDS/view">Slides</a> and <a href="https://youtu.be/_0VpUNATCdY">recording</a> for the above seminar are available publicly.</p>
 
 <p>Current areas of interest:</p>
 <ul>
