--- a/about/index.html
+++ b/about/index.html
@@ -14,7 +14,7 @@
 <meta property="og:url" content="https://jaygala24.github.io/blog/about/" />
 <meta property="og:site_name" content="jaygala24" />
 <script type="application/ld+json">
-{"description":"A blog about ML concepts and its tooling.","url":"https://jaygala24.github.io/blog/about/","@type":"WebSite","headline":"About Me","name":"jaygala24","@context":"https://schema.org"}</script>
+{"headline":"About Me","url":"https://jaygala24.github.io/blog/about/","@type":"WebSite","name":"jaygala24","description":"A blog about ML concepts and its tooling.","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/blog/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://jaygala24.github.io/blog/feed.xml" title="jaygala24" /><!-- the google_analytics_id gets auto inserted from the config file -->
 
