deploy: 24fa754f3c4eabb17c6952993445978f2a282db1

--- a/about/index.html
+++ b/about/index.html
@@ -112,7 +112,7 @@ window.onload = wrap_img;
 
 <p>Hi! I’m Jay 👋, a CS undergrad from Mumbai University who recently graduated in May 2021. I started my programming career with C language in 2017. I have fluency in programming languages like C, Python, and JavaScript. I have been working on solving problems using ML for over a year now.</p>
 
-<p>I’m currently working as a research intern on applying human learning strategies, specifically learning from mistakes for Neural Architecture Search at the <a href="https://ucsd.edu/">University of California San Diego</a> under <a href="https://sites.google.com/site/pengtaoxie2008">Prof. Pengtao Xie</a>. I’m also collaborating with <a href="https://scholar.google.com/citations?hl=en&amp;user=3M3WdvkAAAAJ&amp;view_op=list_works&amp;sortby=pubdate">Zeerak Talat</a> on Hate Speech Detection using Federated Learning.</p>
+<p>I’m currently working as a research intern on applying human learning strategies, specifically learning from mistakes for Neural Architecture Search with <a href="https://sites.google.com/site/pengtaoxie2008">Prof. Pengtao Xie</a> at the <a href="https://ucsd.edu/">University of California San Diego</a>. I’m also collaborating with <a href="https://scholar.google.com/citations?hl=en&amp;user=3M3WdvkAAAAJ&amp;view_op=list_works&amp;sortby=pubdate">Zeerak Talat</a> on Hate Speech Detection using Federated Learning.</p>
 
 <p>I was a Teaching Assistant for the <a href="https://djunicode.github.io/umlsc-2021/">Unicode Machine Learning Summer Course 2021</a> supported by Google Research India.</p>
 
@@ -126,9 +126,9 @@ window.onload = wrap_img;
 
 <p>Independent research projects:</p>
 <ul>
-  <li>Worked on the task of visual dialog to reduce the bias towards dialog history using mixed attention mechanisms as a part of final year project (Accepted at <a href="https://icacds.com/">ICACDS 2021</a>).</li>
-  <li>Co-authored a paper on using object detection and image processing techniques to estimate the dimension of potholes (Published at <a href="https://ecs.wgtn.ac.nz/Events/IVCNZ2020/">IVCNZ 2020</a>).</li>
-  <li>Co-authored a chapter titled “Combatting COVID-19 using Object Detection Techniques” for Elsevier’s CPS-AI &amp; COVID-19 book (Accepted).</li>
+  <li>Worked on the task of visual dialog to reduce the bias towards dialog history using mixed attention mechanisms as a part of final year project.</li>
+  <li>Co-authored a paper on using object detection and image processing techniques to estimate the dimension of potholes.</li>
+  <li>Co-authored a chapter titled “Combatting COVID-19 using Object Detection Techniques” for Elsevier’s CPS-AI &amp; COVID-19 book.</li>
   <li>Co-authored papers on using IoT and ML effectively to automate tasks in the agriculture and waste management sectors.</li>
 </ul>
 
