--- a/about/index.html
+++ b/about/index.html
@@ -112,7 +112,7 @@ window.onload = wrap_img;
 
 <p>Hi! I’m Jay 👋, a CS undergrad from Mumbai University who recently graduated in May 2021. I started my programming career with C language in 2017. I have fluency in programming languages like C, Python, and JavaScript. I have been working on solving problems using ML for over a year now.</p>
 
-<p>I’m currently working as a research intern on applying human learning strategies, specifically learning from mistakes for Neural Architecture Search with <a href="https://sites.google.com/site/pengtaoxie2008">Prof. Pengtao Xie</a> from the <a href="https://ucsd.edu/">University of California San Diego</a>. I’m also collaborating with <a href="https://scholar.google.com/citations?hl=en&amp;user=3M3WdvkAAAAJ&amp;view_op=list_works&amp;sortby=pubdate">Zeerak Talat</a> on Hate Speech Detection using Federated Learning.</p>
+<p>I’m currently working as a research intern on applying human learning strategies, specifically learning from mistakes for Neural Architecture Search with <a href="https://sites.google.com/site/pengtaoxie2008">Prof. Pengtao Xie</a> from the <a href="https://ucsd.edu/">University of California San Diego</a>. You can find the <a href="https://arxiv.org/abs/2112.00275">preprint</a> of the current research work on ArXiv. I’m also collaborating with <a href="https://scholar.google.com/citations?hl=en&amp;user=3M3WdvkAAAAJ&amp;view_op=list_works&amp;sortby=pubdate">Zeerak Talat</a> on Hate Speech Detection using Federated Learning.</p>
 
 <p>I was a Teaching Assistant for the <a href="https://djunicode.github.io/umlsc-2021/">Unicode Machine Learning Summer Course 2021</a> supported by Google Research India.</p>
 
@@ -126,7 +126,7 @@ window.onload = wrap_img;
 
 <p>Independent research projects:</p>
 <ul>
-  <li>Worked on the task of visual dialog to reduce the bias towards dialog history using mixed attention mechanisms as a part of final year project.</li>
+  <li>Worked on the task of visual dialog to reduce the modality bias towards dialog history and salient visual features using mixed attention over dense captions describing minor visual features as a part of final year project.</li>
   <li>Co-authored a paper on using object detection and image processing techniques to estimate the dimension of potholes.</li>
   <li>Co-authored a chapter titled “Combatting COVID-19 using Object Detection Techniques” for Elsevier’s CPS-AI &amp; COVID-19 book.</li>
   <li>Co-authored papers on using IoT and ML effectively to automate tasks in the agriculture and waste management sectors.</li>
@@ -171,7 +171,7 @@ window.onload = wrap_img;
       </div>
     </div>
 
-    <div class="social-links"><ul class="social-media-list"><li><a rel="me" href="https://github.com/jaygala24" title="jaygala24"><svg class="svg-icon grey"><use xlink:href="/blog/assets/minima-social-icons.svg#github"></use></svg></a></li><li><a rel="me" href="https://twitter.com/jaygala24" title="jaygala24"><svg class="svg-icon grey"><use xlink:href="/blog/assets/minima-social-icons.svg#twitter"></use></svg></a></li></ul>
+    <div class="social-links"><ul class="social-media-list"><li><a rel="me" href="https://github.com/jaygala24" target="_blank" title="jaygala24"><svg class="svg-icon grey"><use xlink:href="/blog/assets/minima-social-icons.svg#github"></use></svg></a></li><li><a rel="me" href="https://twitter.com/jaygala24" target="_blank" title="jaygala24"><svg class="svg-icon grey"><use xlink:href="/blog/assets/minima-social-icons.svg#twitter"></use></svg></a></li></ul>
 </div>
 
   </div>
