deploy: d171542be0c864fe9ee7d43c80ad44042e1b09d8

--- a/about/index.html
+++ b/about/index.html
@@ -120,7 +120,7 @@ window.onload = wrap_img;
 <ul>
   <li>Multimodal machine learning (Language and Vision Intersection)</li>
   <li>Commonsense Reasoning</li>
-  <li>Fairness and bias in language models</li>
+  <li>Out-of-distribution generalization</li>
   <li>Interpretability</li>
 </ul>
 
