--- a/search/index.html
+++ b/search/index.html
@@ -14,7 +14,7 @@
 <meta property="og:url" content="https://jaygala24.github.io/blog/search/" />
 <meta property="og:site_name" content="jaygala24" />
 <script type="application/ld+json">
-{"headline":"Search","url":"https://jaygala24.github.io/blog/search/","@type":"WebPage","description":"A blog about ML concepts and its tooling.","@context":"https://schema.org"}</script>
+{"url":"https://jaygala24.github.io/blog/search/","@type":"WebPage","headline":"Search","description":"A blog about ML concepts and its tooling.","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/blog/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://jaygala24.github.io/blog/feed.xml" title="jaygala24" /><!-- the google_analytics_id gets auto inserted from the config file -->
 
