deploy: 58cd085e73e74e4f6f82812375b21990533cd251

--- a/presentations/index.html
+++ b/presentations/index.html
@@ -14,7 +14,7 @@
 <meta property="og:url" content="https://jaygala24.github.io/blog/presentations/" />
 <meta property="og:site_name" content="jaygala24" />
 <script type="application/ld+json">
-{"url":"https://jaygala24.github.io/blog/presentations/","@type":"WebPage","headline":"Presentations &amp; Talks","description":"A blog about ML concepts and its tooling.","@context":"https://schema.org"}</script>
+{"headline":"Presentations &amp; Talks","url":"https://jaygala24.github.io/blog/presentations/","@type":"WebPage","description":"A blog about ML concepts and its tooling.","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/blog/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://jaygala24.github.io/blog/feed.xml" title="jaygala24" /><!-- the google_analytics_id gets auto inserted from the config file -->
 
