--- a/404.html
+++ b/404.html
@@ -14,7 +14,7 @@
 <meta property="og:url" content="https://jaygala24.github.io/blog/404.html" />
 <meta property="og:site_name" content="jaygala24" />
 <script type="application/ld+json">
-{"url":"https://jaygala24.github.io/blog/404.html","@type":"WebPage","headline":"jaygala24","description":"A blog about ML concepts and its tooling.","@context":"https://schema.org"}</script>
+{"headline":"jaygala24","url":"https://jaygala24.github.io/blog/404.html","@type":"WebPage","description":"A blog about ML concepts and its tooling.","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/blog/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://jaygala24.github.io/blog/feed.xml" title="jaygala24" /><!-- the google_analytics_id gets auto inserted from the config file -->
 
