--- a/about/index.html
+++ b/about/index.html
@@ -112,15 +112,15 @@ window.onload = wrap_img;
 
 <p>Hi! I’m Jay 👋, a CS undergrad from Mumbai University who recently graduated in May 2021. I started my programming career with C language in 2017. I have fluency in programming languages like C, Python, and JavaScript. I have been working on solving problems using ML for over a year now.</p>
 
-<p>I’m currently working on developing robust VQA system using adversarial data generation with <a href="https://sites.google.com/site/pengtaoxie2008">Prof. Pengtao Xie</a> from the <a href="https://ucsd.edu/">University of California San Diego</a>. You can find the <a href="https://arxiv.org/abs/2112.00275">preprint</a> of my recent work on applying human strategy of learning from mistakes for differentiable architecture search approaches. I’m also collaborating with <a href="https://scholar.google.com/citations?hl=en&amp;user=3M3WdvkAAAAJ&amp;view_op=list_works&amp;sortby=pubdate">Dr. Zeerak Talat</a> on Hate Speech Detection using Federated Learning.</p>
+<p>I’m currently working on developing robust VQA system using neural architecture search and adversarial data generation with <a href="https://sites.google.com/site/pengtaoxie2008">Prof. Pengtao Xie</a> from the <a href="https://ucsd.edu/">University of California San Diego</a>. You can find the <a href="https://arxiv.org/abs/2112.00275">preprint</a> of my recent work on applying human strategy of learning from mistakes for differentiable architecture search approaches. I’m also collaborating with <a href="https://scholar.google.com/citations?hl=en&amp;user=3M3WdvkAAAAJ&amp;view_op=list_works&amp;sortby=pubdate">Dr. Zeerak Talat</a> on Hate Speech Detection using Federated Learning.</p>
 
 <p>I was a Teaching Assistant for the <a href="https://djunicode.github.io/umlsc-2021/">Unicode Machine Learning Summer Course 2021</a> supported by Google Research India.</p>
 
 <p>Current areas of interest:</p>
 <ul>
-  <li>Multimodal machine learning (Language and Vision Intersection)</li>
+  <li>Multimodal Machine Learning (Language and Vision Intersection)</li>
   <li>Commonsense Reasoning</li>
-  <li>Out-of-distribution generalization</li>
+  <li>Out-of-distribution Generalization</li>
   <li>Interpretability</li>
 </ul>
 
